[gd_scene load_steps=7 format=3 uid="uid://c31kqoh267go4"]

[ext_resource type="PackedScene" uid="uid://dosa85y0k8h4p" path="res://ui/window/window.tscn" id="1_2s6v2"]
[ext_resource type="Texture2D" uid="uid://bxr6f2qyh03br" path="res://ui/assets/icons/ui_mode/doc-detail.svg" id="2_1t5d4"]
[ext_resource type="Texture2D" uid="uid://bhix3opbbgbln" path="res://ui/assets/icons/ui_mode/list-add.svg" id="3_1t5d4"]
[ext_resource type="Script" uid="uid://m8wpya8blj6i" path="res://ui/ui_mode/scripts/ui_mode/close_button.gd" id="3_ryfmk"]
[ext_resource type="Script" uid="uid://cpsryvnkmyh8i" path="res://ui/ui_mode/scripts/ui_mode/generate_button.gd" id="3_s0wku"]
[ext_resource type="Script" uid="uid://bfdatkfydagfy" path="res://ui/ui_mode/scripts/ui_mode/add_button.gd" id="4_ng0uj"]

[node name="UiMode" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Window" parent="." instance=ExtResource("1_2s6v2")]
layout_mode = 1

[node name="DocButton" type="Button" parent="Window/VSplitContainer/TitleBar/Right" index="0"]
layout_mode = 2
icon = ExtResource("2_1t5d4")

[node name="CloseButton" parent="Window/VSplitContainer/TitleBar/Right" index="2"]
script = ExtResource("3_ryfmk")

[node name="MarginContainer" type="MarginContainer" parent="Window/VSplitContainer/MarginContainer/WindowContent" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HSplitContainer" type="HSplitContainer" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer"]
layout_mode = 2
split_offset = 250

[node name="Left" type="Control" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer"]
layout_mode = 2

[node name="Options" type="VBoxContainer" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="Fps" type="VBoxContainer" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options"]
layout_mode = 2

[node name="Name" type="Label" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options/Fps"]
layout_mode = 2
theme_type_variation = &"on_background_label"
text = "视频帧率"

[node name="Description" type="Label" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options/Fps"]
layout_mode = 2
theme_type_variation = &"on_background_label_secondary"
text = "设置生成视频的视频帧率（默认24fps）"

[node name="MarginContainer" type="MarginContainer" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options/Fps"]
layout_mode = 2
theme_override_constants/margin_top = 3

[node name="FpsInput" type="SpinBox" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options/Fps/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 10.0
max_value = 60.0
value = 24.0

[node name="Background" type="VBoxContainer" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options"]
layout_mode = 2

[node name="Name" type="Label" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options/Background"]
layout_mode = 2
theme_type_variation = &"on_background_label"
text = "视频背景颜色"

[node name="Description" type="Label" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options/Background"]
layout_mode = 2
theme_type_variation = &"on_background_label_secondary"
text = "设置生成视频的背景颜色"

[node name="MarginContainer" type="MarginContainer" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options/Background"]
layout_mode = 2
theme_override_constants/margin_top = 3

[node name="BackgroundInput" type="ColorPickerButton" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options/Background/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
color = Color(0, 1, 0, 1)

[node name="RecordingMode" type="VBoxContainer" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options"]
layout_mode = 2

[node name="Name" type="Label" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options/RecordingMode"]
layout_mode = 2
theme_type_variation = &"on_background_label"
text = "录制模式"

[node name="Description" type="Label" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options/RecordingMode"]
layout_mode = 2
theme_type_variation = &"on_background_label_secondary"
text = "设置生成视频的行为（合并多个对话到同一视频或拆分）"
autowrap_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options/RecordingMode"]
layout_mode = 2
theme_override_constants/margin_top = 3

[node name="RecordingModeInput" type="OptionButton" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options/RecordingMode/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "合并对话"
popup/item_0/id = 0
popup/item_1/text = "拆分对话"
popup/item_1/id = 1

[node name="RecordingsOutputDir" type="VBoxContainer" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options"]
layout_mode = 2

[node name="Name" type="Label" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options/RecordingsOutputDir"]
layout_mode = 2
theme_type_variation = &"on_background_label"
text = "输出路径"

[node name="Description" type="Label" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options/RecordingsOutputDir"]
layout_mode = 2
theme_type_variation = &"on_background_label_secondary"
text = "设置生成视频的输出路径"

[node name="MarginContainer" type="MarginContainer" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options/RecordingsOutputDir"]
layout_mode = 2
theme_override_constants/margin_top = 3

[node name="RecordingsOutputDirInput" type="LineEdit" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left/Options/RecordingsOutputDir/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GenerateButton" type="Button" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Left"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "生成"
script = ExtResource("3_s0wku")

[node name="Right" type="Control" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer"]
layout_mode = 2

[node name="VSplitContainer" type="VSplitContainer" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Right"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
dragging_enabled = false
dragger_visibility = 1

[node name="Header" type="Control" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Right/VSplitContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Title" type="Label" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Right/VSplitContainer/Header"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -10.0
offset_right = 40.0
offset_bottom = 10.0
grow_vertical = 2
theme_type_variation = &"on_background_label"
text = "对话"

[node name="AddButton" type="Button" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Right/VSplitContainer/Header"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -14.0
offset_bottom = 14.0
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("3_1t5d4")
script = ExtResource("4_ng0uj")

[node name="ScrollContainer" type="ScrollContainer" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Right/VSplitContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Right/VSplitContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="Dialogues" type="VBoxContainer" parent="Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/HSplitContainer/Right/VSplitContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[editable path="Window"]
